Fix click on mobile

--- a/src/customizations/button/_button.scss
+++ b/src/customizations/button/_button.scss
@@ -237,7 +237,6 @@
         &_more-content {
             position: relative;
             left: 50%;
-            z-index: 10;
             margin: 2rem 0;
             padding: 1.4rem 3.5rem 1.4rem 2.5rem;
             min-width: 27rem;
