--- a/src/customizations/category-links/_category-links.scss
+++ b/src/customizations/category-links/_category-links.scss
@@ -59,7 +59,6 @@ $namespace: 'cs-';
 
         @include media( '>=tablet' ) {
             position: relative;
-            z-index: 10;
             margin: 0 0 0 1.5rem;
             padding: 0 0 0 1.5rem;
             text-transform: uppercase;
@@ -199,6 +198,12 @@ $namespace: 'cs-';
             left: -1rem;
             right: -1rem;
             width: auto;
+            transform: translateY( 4.8rem );
+        }
+        &--in {
+            @include media ( '<tablet' ) {
+                transform: translateY( 0 );
+            }
         }
     }
 }
